--- a/index.html
+++ b/index.html
@@ -212,6 +212,26 @@
                         </center>
                         <h3>PHP</h3>
                     </div>
+                    <div>
+                        <center>
+                        <picture class="imagen-conocimiento">
+                            <source srcset="build/img/logojava.avif" type="image/avif">
+                            <source srcset="build/img/logojava.webp" type="image/webp">
+                            <img lazy="loading" width="200" height="300" src="build/img/logojava.jpg" alt="Proyecto 5">
+                        </picture>
+                        </center>
+                        <h3>Java</h3>
+                    </div>
+                    <div>
+                        <center>
+                        <picture class="imagen-conocimiento">
+                            <source srcset="build/img/logopython.avif" type="image/avif">
+                            <source srcset="build/img/logopython.webp" type="image/webp">
+                            <img lazy="loading" width="200" height="300" src="build/img/logopython.jpg" alt="Proyecto 5">
+                        </picture>
+                        </center>
+                        <h3>Python</h3>
+                    </div>
                 </div>
             </div>
             <div class="parte-herramientas">
@@ -277,6 +297,76 @@
                         </center>
                         <h3>VS Code</h3>
                     </div>
+                    <div>
+                        <center>
+                        <picture class="imagen-conocimiento">
+                            <source srcset="build/img/logonetbeans.avif" type="image/avif">
+                            <source srcset="build/img/logonetbeans.webp" type="image/webp">
+                            <img lazy="loading" width="200" height="300" src="build/img/logonetbeans.jpg" alt="Proyecto 5">
+                        </picture>
+                        </center>
+                        <h3>Netbeans</h3>
+                    </div>
+                    <div>
+                        <center>
+                        <picture class="imagen-conocimiento">
+                            <source srcset="build/img/logopowerbi.avif" type="image/avif">
+                            <source srcset="build/img/logopowerbi.webp" type="image/webp">
+                            <img lazy="loading" width="200" height="300" src="build/img/logopowerbi.jpg" alt="Proyecto 5">
+                        </picture>
+                        </center>
+                        <h3>Power BI</h3>
+                    </div>
+                    <div>
+                        <center>
+                        <picture class="imagen-conocimiento">
+                            <source srcset="build/img/logounity.avif" type="image/avif">
+                            <source srcset="build/img/logounity.webp" type="image/webp">
+                            <img lazy="loading" width="200" height="300" src="build/img/logounity.jpg" alt="Proyecto 5">
+                        </picture>
+                        </center>
+                        <h3>Unity</h3>
+                    </div>
+                    <div>
+                        <center>
+                        <picture class="imagen-conocimiento">
+                            <source srcset="build/img/logoscrum.avif" type="image/avif">
+                            <source srcset="build/img/logoscrum.webp" type="image/webp">
+                            <img lazy="loading" width="200" height="300" src="build/img/logoscrum.jpg" alt="Proyecto 5">
+                        </picture>
+                        </center>
+                        <h3>Metodología Scrum</h3>
+                    </div>
+                    <div>
+                        <center>
+                        <picture class="imagen-conocimiento">
+                            <source srcset="build/img/logowindows.avif" type="image/avif">
+                            <source srcset="build/img/logowindows.webp" type="image/webp">
+                            <img lazy="loading" width="200" height="300" src="build/img/logowindows.jpg" alt="Proyecto 5">
+                        </picture>
+                        </center>
+                        <h3>Windows</h3>
+                    </div>
+                    <div>
+                        <center>
+                        <picture class="imagen-conocimiento">
+                            <source srcset="build/img/logolinux.avif" type="image/avif">
+                            <source srcset="build/img/logolinux.webp" type="image/webp">
+                            <img lazy="loading" width="200" height="300" src="build/img/logolinux.jpg" alt="Proyecto 5">
+                        </picture>
+                        </center>
+                        <h3>Linux</h3>
+                    </div>
+                    <div>
+                        <center>
+                        <picture class="imagen-conocimiento">
+                            <source srcset="build/img/logoingles.avif" type="image/avif">
+                            <source srcset="build/img/logoingles.webp" type="image/webp">
+                            <img lazy="loading" width="200" height="300" src="build/img/logoingles.jpg" alt="Proyecto 5">
+                        </picture>
+                        </center>
+                        <h3>Inglés A2</h3>
+                    </div>
                 </div>
             </div>
         </div>
@@ -284,7 +374,7 @@
     <h1>Mi nombre es <span>Juan Pablo</span> Ahumada Avila</h1>
     <section id="perfiles" class="contenedor perfil">
         <div class="informacion">
-            <p>Soy estudiante de Ingeniería de Sistemas de la Universidad de Cundinamarca, una persona con principios éticos y morales, tengo con gusto por el desarrollo web en su parte de front-end y back-end, estoy muy interesado por progresar y ser una persona de bien, me gusta realizar las labores con dedicación y buena actitud, siempre dispuesto a aprender nuevas cosas, me gusta ser organizado, responsable y puntual, soy una persona comprometida, me gusta esforzarme para hacer las cosas lo mejor posible, quiero estudiar para ser mejor persona y trabajador, al igual que tener la capacidad de poder ayudar lo más que pueda con mi conocimiento. </p>
+            <p>Soy estudiante de Ingeniería de Sistemas de la Universidad de Cundinamarca, me considero una persona con principios éticos y morales, tengo gusto por la ciencia de datos y el desarrollo web frente al desarrollo Full-Stack y manejo de bases de datos SQL y NoSQL, busco desarrollar software de calidad que mejore la experiencia del cliente, estoy muy interesado en progresar y aprender cada día más, me gusta realizar las labores con dedicación y buena actitud, siempre dispuesto a aprender nuevas cosas, me gusta ser organizado, responsable y puntual, soy una persona comprometida, me gusta esforzarme para hacer las cosas lo mejor posible, quiero estudiar y aprender para ser mejor persona y trabajador, al igual que tener la capacidad de poder ayudar lo más que pueda con mi conocimiento.  </p>
         </div>
         <div class="link-img">
             <center>
