--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/build/img/logopestaña.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;700&display=swap" rel="stylesheet">
@@ -403,7 +404,7 @@
             <a href="https://github.com/JuanPavlo" target="_blank">
                 <i class="fa-brands fa-github"></i>
             </a>
-            <a href="www.linkedin.com/in/juan-pablo-ahumada-avila-00a7591a5" target="_blank">
+            <a href="https://www.linkedin.com/in/juan-pablo-ahumada-avila-00a7591a5" target="_blank">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
             <a href="https://app.netlify.com/teams/jpahumada27/overview" target="_blank"> 
@@ -414,6 +415,9 @@
             </a>
             <a href="https://www.instagram.com/avilajuanpabloahumada/" target="_blank">
                 <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://wa.link/uerv9g" target="_blank">
+                <i class="fa-brands fa-whatsapp"></i>
             </a>
         </form>
     </section>
