--- a/index.html
+++ b/index.html
@@ -166,6 +166,16 @@
                     <div>
                         <center>
                         <picture class="imagen-conocimiento">
+                            <source srcset="build/img/logocobol.avif" type="image/avif">
+                            <source srcset="build/img/logocobol.webp" type="image/webp">
+                            <img lazy="loading" width="200" height="300" src="build/img/logocobol.jpg" alt="Proyecto 5">
+                        </picture>
+                        </center>
+                        <h3>COBOL, Control -M, CIC'S, JCL y Programas</h3>
+                    </div>
+                    <div>
+                        <center>
+                        <picture class="imagen-conocimiento">
                             <source srcset="build/img/logohtml.avif" type="image/avif">
                             <source srcset="build/img/logohtml.webp" type="image/webp">
                             <img lazy="loading" width="200" height="300" src="build/img/logohtml.jpg" alt="Proyecto 5">
@@ -238,6 +248,26 @@
             <div class="parte-herramientas">
                 <h2>Herramientas</h2>
                 <div class="herramientas">
+                    <div>
+                        <center>
+                        <picture class="imagen-conocimiento">
+                            <source srcset="build/img/logoscrum.avif" type="image/avif">
+                            <source srcset="build/img/logoscrum.webp" type="image/webp">
+                            <img lazy="loading" width="200" height="300" src="build/img/logoscrum.jpg" alt="Proyecto 5">
+                        </picture>
+                        </center>
+                        <h3>Metodología Scrum</h3>
+                    </div>
+                    <div>
+                        <center>
+                        <picture class="imagen-conocimiento">
+                            <source srcset="build/img/logoaltamira.avif" type="image/avif">
+                            <source srcset="build/img/logoaltamira.webp" type="image/webp">
+                            <img lazy="loading" width="200" height="300" src="build/img/logoaltamira.jpg" alt="Proyecto 5">
+                        </picture>
+                        </center>
+                        <h3>Altamira</h3>
+                    </div>
                     <div>
                         <center>
                         <picture class="imagen-conocimiento">
@@ -331,16 +361,6 @@
                     <div>
                         <center>
                         <picture class="imagen-conocimiento">
-                            <source srcset="build/img/logoscrum.avif" type="image/avif">
-                            <source srcset="build/img/logoscrum.webp" type="image/webp">
-                            <img lazy="loading" width="200" height="300" src="build/img/logoscrum.jpg" alt="Proyecto 5">
-                        </picture>
-                        </center>
-                        <h3>Metodología Scrum</h3>
-                    </div>
-                    <div>
-                        <center>
-                        <picture class="imagen-conocimiento">
                             <source srcset="build/img/logowindows.avif" type="image/avif">
                             <source srcset="build/img/logowindows.webp" type="image/webp">
                             <img lazy="loading" width="200" height="300" src="build/img/logowindows.jpg" alt="Proyecto 5">
@@ -375,7 +395,7 @@
     <h1>Mi nombre es <span>Juan Pablo</span> Ahumada Avila</h1>
     <section id="perfiles" class="contenedor perfil">
         <div class="informacion">
-            <p>Soy estudiante de Ingeniería de Sistemas de la Universidad de Cundinamarca, me considero una persona con principios éticos y morales, tengo gusto por la ciencia de datos y el desarrollo web frente al desarrollo Full-Stack y manejo de bases de datos SQL y NoSQL, busco desarrollar software de calidad que mejore la experiencia del cliente, estoy muy interesado en progresar y aprender cada día más, me gusta realizar las labores con dedicación y buena actitud, siempre dispuesto a aprender nuevas cosas, me gusta ser organizado, responsable y puntual, soy una persona comprometida, me gusta esforzarme para hacer las cosas lo mejor posible, quiero estudiar y aprender para ser mejor persona y trabajador, al igual que tener la capacidad de poder ayudar lo más que pueda con mi conocimiento.  </p>
+            <p>Soy estudiante de Ingeniería de Sistemas de la Universidad de Cundinamarca, me considero una persona con principios éticos y morales, tengo gusto por la ciencia de datos y el desarrollo web frente al desarrollo Full-Stack y manejo de bases de datos SQL y NoSQL, busco desarrollar software de calidad que mejore la experiencia del cliente, estoy muy interesado en progresar y aprender cada día más, me gusta realizar las labores con dedicación y buena actitud, siempre dispuesto a aprender nuevas cosas, me gusta ser organizado, responsable y puntual, soy una persona comprometida, me gusta esforzarme para hacer las cosas lo mejor posible, quiero estudiar y aprender para ser mejor persona y trabajador, al igual que tener la capacidad de poder ayudar lo más que pueda con mi conocimiento.</p>
         </div>
         <div class="link-img">
             <center>
